--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <title>Piratecom</title>
+    <title>Bitfidel</title>
     <style>
         body {
             background-color: white;
