--- a/Game.html
+++ b/Game.html
@@ -2,7 +2,6 @@
 
 <head>
 <title>T-Rex Game</title>
-<meta name="description" content="Ripped T-Rex/Dino game of Chromium">
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 	<!--script type="text/javascript" src="a.js"></script-->
@@ -16,18 +15,9 @@
         myClasses[i].style.display = 'none';
       }
 	}
-    // Copyright (c) 2014 The Chromium Authors. All rights reserved.
-    // Use of this source code is governed by a BSD-style license that can be
-    // found in the LICENSE file.
     (function() {
     'use strict';
-    /**
-    * T-Rex runner.
-    * @param {string} outerContainerId Outer containing element id.
-    * @param {object} opt_config
-    * @constructor
-    * @export
-    */
+
     function Runner(outerContainerId, opt_config) {
     // Singleton
     if (Runner.instance_) {
@@ -1924,9 +1914,7 @@
 	</script>
 
 
-	<style>/* Copyright 2014 The Chromium Authors. All rights reserved.
-   Use of this source code is governed by a BSD-style license that can be
-   found in the LICENSE file. */
+	<style>
 
 a {
   color: #585858;
