--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Cache-control" content="public">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-	<title>T-Rex Chrome Offline Game - Running Mario</title>
-	<meta name="description"  content="Running Mario is a uniq skin of the famous game Chrome Dino (also called T-Rex game). Press Space to start the game and jump your Mario, use down arrow (↓) to duck." />
+	<title></title>
 	<meta property="og:title" content="Chrome Dino Game">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://chromedino.com/">
@@ -37,11 +36,7 @@ window.onkeydown = function(e) {
 <body id="t" class="offline mario-page">
 
 	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
-		<div id="main-content">
-			<h1>T-Rex Chrome Offline Game - Running Mario</h1>
-			<h2>Google Dinosaur Record</h2>
-			<p>This replica can be played on Google Chrome, Safari and mobile devices. Press Space to start the game and jump your Mario, use down arrow (↓) to duck.</p>
-		</div>
+
 	</header>
 <div id="shareBlock"  style="display:none">
     <table style="margin:0 auto 10px"><tbody><tr>
