--- a/404.html
+++ b/404.html
@@ -2,8 +2,7 @@
 <!doctype html>
 <html>
 
-<!-- Mirrored from chromedino.com/mario/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Feb 2024 14:15:26 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Cache-control" content="public">
