--- a/404.html
+++ b/404.html
@@ -2,12 +2,14 @@
 <!doctype html>
 <html>
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Mirrored from chromedino.com/mario/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Feb 2024 14:15:26 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Cache-control" content="public">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-	<title></title>
+	<title>T-Rex Chrome Offline Game - Running Mario</title>
+	<meta name="description"  content="Running Mario is a uniq skin of the famous game Chrome Dino (also called T-Rex game). Press Space to start the game and jump your Mario, use down arrow (↓) to duck." />
 	<meta property="og:title" content="Chrome Dino Game">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://chromedino.com/">
@@ -35,7 +37,11 @@ window.onkeydown = function(e) {
 <body id="t" class="offline mario-page">
 
 	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
-
+		<div id="main-content">
+			<h1>T-Rex Chrome Offline Game - Running Mario</h1>
+			<h2>Google Dinosaur Record</h2>
+			<p>This replica can be played on Google Chrome, Safari and mobile devices. Press Space to start the game and jump your Mario, use down arrow (↓) to duck.</p>
+		</div>
 	</header>
 <div id="shareBlock"  style="display:none">
     <table style="margin:0 auto 10px"><tbody><tr>
@@ -128,7 +134,7 @@ window.onkeydown = function(e) {
 
 	<div class="__wrapper" align="center">
 
-<br /><font color="yellow">Original Mario Bros game play on <a href="https://supermario-game.com/" target="_blank">Supermario-Game.com</font></a><br /><br />
+
 		
 		
 	
@@ -171,10 +177,81 @@ window.onkeydown = function(e) {
 						
 		</ul>
 		
-		
+			<div class="___wrapper " align="center">
+<h3>What is your best score in Mario game? (without cheats!)</h3>
+<div id="mc-container" class="mario-theme">
+                <form action="https://chromedino.com/mario/" method="post" class="vote-form">
+                <button onclick="setVote(0)">100-499</button>
+                <button onclick="setVote(1)">500-1999</button>
+                <button onclick="setVote(2)">2000-4999</button>
+                <button onclick="setVote(3)">5000-9999</button>
+                <button onclick="setVote(4)">10000+</button>
+                <input type="hidden" name="__vote" value="0">
+                <script>
+                    function setVote(i) {
+                        $('[name="__vote"]').val(i);
+                        $('.vote-form').submit();
+                    }
+                </script>
+            </form>
+            </div>
+
+
+
+                <!-- ?php if ($_SERVER['REQUEST_URI'] !== '/'): ? -->
+<h3>Install the Running Mario game on your website:</h3>
+                <div id="mc-container" class="mario-theme">
+                    <div class="iframe">
+                        &lt;iframe src="https://chromedino.com/mario/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"&gt;&lt;/iframe&gt;<br>
+                        &lt;style type="text/css"&gt;iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }&lt;/style&gt;
+                    </div>
+                </div>
+                <!-- ?php endif; ? -->
+</div>
+
+		<br>
+		<div class="copyright">&copy; 2016-2024 - Google Chrome Dinosaur Game Online		
+
+	</footer>
+	
+	<script type="text/javascript">
+		(function() {
+			var link_element = document.createElement("link"),
+				s = document.getElementsByTagName("script")[0];
+			if (window.location.protocol !== "http:" && window.location.protocol !== "index.html") {
+				link_element.href = "index.html";
+			}
+			link_element.href += "//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800";
+			link_element.rel = "stylesheet";
+			link_element.type = "text/css";
+			s.parentNode.insertBefore(link_element, s);
+		})();
+	</script>
+	
+	<script src="https://chromedino.com/js/game.js?v=6"></script>
+		<script src="https://chromedino.com/js/gdpr.js?v=2"></script>
+	
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-87132083-2', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+	<!--LiveInternet counter--><script type="text/javascript">
+document.write("<a href='//www.liveinternet.ru/click' "+
+"target=_blank><img src='//counter.yadro.ru/hit?t44.2;r"+
+escape(document.referrer)+((typeof(screen)=="undefined")?"":
+";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+";"+Math.random()+
+"' alt='' title='LiveInternet' "+
+"border='0' width='1' height='1'><\/a>")
+</script><!--/LiveInternet-->
     
   
 </body>
-
-<!-- Mirrored from chromedino.com/mario/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 09 Feb 2024 14:15:28 GMT -->
 </html>
