--- a/404.html
+++ b/404.html
@@ -177,35 +177,12 @@ window.onkeydown = function(e) {
 						
 		</ul>
 		
-			<div class="___wrapper " align="center">
-<h3>What is your best score in Mario game? (without cheats!)</h3>
-<div id="mc-container" class="mario-theme">
-                <form action="https://chromedino.com/mario/" method="post" class="vote-form">
-                <button onclick="setVote(0)">100-499</button>
-                <button onclick="setVote(1)">500-1999</button>
-                <button onclick="setVote(2)">2000-4999</button>
-                <button onclick="setVote(3)">5000-9999</button>
-                <button onclick="setVote(4)">10000+</button>
-                <input type="hidden" name="__vote" value="0">
-                <script>
-                    function setVote(i) {
-                        $('[name="__vote"]').val(i);
-                        $('.vote-form').submit();
-                    }
-                </script>
-            </form>
-            </div>
+			<div class="___wrapper " align="center"
 
 
 
                 <!-- ?php if ($_SERVER['REQUEST_URI'] !== '/'): ? -->
-<h3>Install the Running Mario game on your website:</h3>
-                <div id="mc-container" class="mario-theme">
-                    <div class="iframe">
-                        &lt;iframe src="https://chromedino.com/mario/" frameborder="0" scrolling="no" width="100%" height="100%" loading="lazy"&gt;&lt;/iframe&gt;<br>
-                        &lt;style type="text/css"&gt;iframe { position: absolute; width: 100%; height: 100%; z-index: 999; }&lt;/style&gt;
-                    </div>
-                </div>
+
                 <!-- ?php endif; ? -->
 </div>
 
