--- a/404.html
+++ b/404.html
@@ -38,6 +38,7 @@ window.onkeydown = function(e) {
 	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
 
 	</header>
+	<img src="bitfidel.png" alt="bitfidel.com">
 <div id="shareBlock"  style="display:none">
     <table style="margin:0 auto 10px"><tbody><tr>
             <td colspan="3"><strong><span style="font-size:20px;"><span style="color:#6cf">S</span>hare Your <span style="color:#e6ca00">S</span>core</span></strong></td>
