--- a/404.html
+++ b/404.html
@@ -36,7 +36,9 @@ window.onkeydown = function(e) {
 <body id="t" class="offline mario-page">
 
 	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
-<img src="bitfidel.png" alt="bitfidel.com">
+<div style="text-align: center;">
+    <img src="bitfidel.png" alt="bitfidel.com">
+</div>
 	</header>
 	
 <div id="shareBlock"  style="display:none">
