--- a/404.html
+++ b/404.html
@@ -47,6 +47,19 @@ window.onkeydown = function(e) {
 	<div class="__wrapper" align="center">	
 		</div>
 <br>	
+		<script type="text/javascript">
+		(function() {
+			var link_element = document.createElement("link"),
+				s = document.getElementsByTagName("script")[0];
+			if (window.location.protocol !== "http:" && window.location.protocol !== "index.html") {
+				link_element.href = "index.html";
+			}
+			link_element.href += "//fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800";
+			link_element.rel = "stylesheet";
+			link_element.type = "text/css";
+			s.parentNode.insertBefore(link_element, s);
+		})();
+	</script>
 	
 	<script src="https://chromedino.com/js/game.js?v=6"></script>
 		<script src="https://chromedino.com/js/gdpr.js?v=2"></script>   
