--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Cache-control" content="public">
@@ -30,7 +30,7 @@ window.onkeydown = function(e) {
 
 	<header id="main-frame-error" class="interstitial-wrapper __wrapper">
 <div style="text-align: center;">
-    <img src="bitfidel.png" alt="bitfidel.com">
+    <img src="bitfidel404.png" alt="bitfidel.com">
 </div>
 	</header>
 	
